--- a/adroit/docker/dockerfile-centos.tmpl
+++ b/adroit/docker/dockerfile-centos.tmpl
@@ -1,15 +1,13 @@
 FROM {image}
 
-RUN yum -y update && yum -y install systemd
-# python-pip requires epel, let's avoid that
-RUN curl -sSL https://bootstrap.pypa.io/get-pip.py | python
+RUN yum -y update && yum -y install systemd python3-pip python3-setuptools
+
+# install ansible and additional modules needed
+RUN pip3 install --no-cache-dir ansible netaddr
 
 # prevent systemd from stealing host matchine tty and more
 RUN find /etc/systemd/system/*.wants /lib/systemd/system/*.wants -type l \
 	| grep -v -e dbus -e journal -e tmpfiles | xargs rm -fv
-
-# install ansible and additional modules needed
-RUN pip install --no-cache-dir ansible netaddr
 
 RUN mkdir -p /etc/ansible/roles /etc/ansible/group_vars/all
 RUN printf '{apply_role_playbook}' > /etc/ansible/apply-role.yml
