--- a/adroit/docker/dockerfile-debian.tmpl
+++ b/adroit/docker/dockerfile-debian.tmpl
@@ -2,7 +2,7 @@ FROM {image}
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get -y dist-upgrade && \
-	apt-get install -y --no-install-recommends systemd python-pip python-setuptools && \
+	apt-get install -y --no-install-recommends systemd python3-pip python3-setuptools && \
 	rm -rf /var/lib/apt/lists/* /var/cache/apt /usr/share/doc /usr/share/man
 
 # prevent systemd from stealing host matchine tty and more
@@ -10,7 +10,7 @@ RUN find /etc/systemd/system/*.wants /lib/systemd/system/*.wants -type l \
 	| grep -v -e dbus -e journal -e tmpfiles | xargs rm -fv
 
 # install ansible and additional modules needed
-RUN pip install --no-cache-dir ansible netaddr
+RUN pip3 install --no-cache-dir ansible netaddr
 
 RUN mkdir -p /etc/ansible/roles /etc/ansible/group_vars/all
 RUN printf '{apply_role_playbook}' > /etc/ansible/apply-role.yml
